...
            </objects>
            <point key="canvasLocation" x="-734" y="85"/>
        </scene>
        <!--Connect-->
        <scene sceneID="TiA-Pt-i1B">
            <objects>
                <viewControllerPlaceholder storyboardName="Connect" id="Pd2-Hw-0sx" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="nMO-JS-eWE" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-732" y="351"/>
        </scene>
        <!--CGLocation-->
        <scene sceneID="vSs-bY-9ON">
...
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="IYU-7X-Gk2" userLabel="Stack 2">
                                        <rect key="frame" x="0.0" y="189.5" width="371" height="160.5"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kkf-nf-Fg4" userLabel="wellnessTests">
                                                <rect key="frame" x="0.0" y="0.0" width="184" height="160.5"/>
                                                <state key="normal" image="Wellness"/>
                                                <connections>
                                                    <segue destination="4xU-9e-LM5" kind="show" id="cYo-g2-o2K"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACE-xh-bIr" userLabel="medication">
                                                <rect key="frame" x="186" y="0.0" width="185" height="160.5"/>
                                                <state key="normal" image="Medication"/>
                                                <connections>
                                                    <action selector="noPatientSelected:" destination="8FY-gC-Gvs" eventType="touchUpInside" id="GY0-Yt-idy"/>
                                                    <segue destination="ppK-x3-VzO" kind="show" id="UAJ-Qv-4iv"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
                                                <rect key="frame" x="0.0" y="0.0" width="184" height="156"/>
                                                <state key="normal" image="Connect"/>
                                                <connections>
                                                    <segue destination="Pd2-Hw-0sx" kind="presentation" id="fDk-ae-Vah"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wnh-Dt-kMM" userLabel="OptionsButton">
                                                <rect key="frame" x="186" y="0.0" width="185" height="156"/>
                                                <accessibility key="accessibilityConfiguration" label="OptionsButton"/>
                                                <state key="normal" image="Options"/>
                                                <connections>
                                                    <segue destination="IkE-yx-Ksk" kind="presentation" id="mkB-l2-bkK"/>
                                                </connections>
...
