<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N5x-Nl-hwv">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--WellnessGraphs-->
        <scene sceneID="W5b-vx-Yyi">
            <objects>
                <viewController storyboardIdentifier="WellnessGraphs" title="WellnessGraphs" modalPresentationStyle="fullScreen" id="N5x-Nl-hwv" customClass="WellnessGraphsViewController" customModule="UnHindr" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="qtD-Ec-Q5z">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="abx-TQ-Ldt">
                                <rect key="frame" x="0.0" y="39" width="414" height="818"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="Vlh-CC-4CE">
                                        <rect key="frame" x="31" y="30" width="352" height="728"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sLH-Hv-FxY" userLabel="Cog">
                                                <rect key="frame" x="0.0" y="0.0" width="352" height="145"/>
                                                <state key="normal" image="CogGame graph button"/>
                                                <connections>
                                                    <segue destination="5Tg-Zv-11V" kind="show" id="iSI-wc-H8V"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gdd-Lq-6j6" userLabel="Mood">
                                                <rect key="frame" x="0.0" y="205" width="352" height="145"/>
                                                <state key="normal" image="Mood Graph Button"/>
                                                <connections>
                                                    <segue destination="WUz-gb-EjB" kind="show" id="WaK-9j-MBb"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xNr-dU-86G" userLabel="Motor">
                                                <rect key="frame" x="0.0" y="410" width="352" height="145"/>
                                                <state key="normal" image="Motorgame graph button"/>
                                                <connections>
                                                    <segue destination="85w-Ie-q5Z" kind="show" id="fcf-pJ-VOj"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x92-QH-AAe" userLabel="Back">
                                                <rect key="frame" x="0.0" y="615" width="352" height="113"/>
                                                <state key="normal" image="Back Button">
                                                    <color key="titleColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                                </state>
                                                <connections>
                                                    <action selector="backButtonTapped:" destination="N5x-Nl-hwv" eventType="touchUpInside" id="kkE-5N-aou"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="Vlh-CC-4CE" firstAttribute="width" secondItem="abx-TQ-Ldt" secondAttribute="width" multiplier="0.85" id="1dr-Bs-3nX"/>
                                    <constraint firstAttribute="bottom" secondItem="Vlh-CC-4CE" secondAttribute="bottom" constant="40" id="EAu-aT-Wb4"/>
                                    <constraint firstItem="Vlh-CC-4CE" firstAttribute="top" secondItem="abx-TQ-Ldt" secondAttribute="top" constant="30" id="NcJ-Cb-Kfo"/>
                                    <constraint firstItem="Vlh-CC-4CE" firstAttribute="centerX" secondItem="abx-TQ-Ldt" secondAttribute="centerX" id="aaw-4Y-cJx"/>
                                    <constraint firstAttribute="trailing" secondItem="Vlh-CC-4CE" secondAttribute="trailing" constant="18" id="oof-uv-gKl"/>
                                </constraints>
                            </scrollView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="abx-TQ-Ldt" firstAttribute="centerX" secondItem="qtD-Ec-Q5z" secondAttribute="centerX" id="cVC-Z0-YnJ"/>
                            <constraint firstItem="abx-TQ-Ldt" firstAttribute="width" secondItem="Ias-6I-mg1" secondAttribute="width" id="nbq-MT-fFl"/>
                            <constraint firstItem="abx-TQ-Ldt" firstAttribute="centerY" secondItem="qtD-Ec-Q5z" secondAttribute="centerY" id="uCu-HL-R3M"/>
                            <constraint firstItem="abx-TQ-Ldt" firstAttribute="height" secondItem="Ias-6I-mg1" secondAttribute="height" id="uzD-W8-CsB"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Ias-6I-mg1"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="03j-4z-Usa" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="266.66666666666669" y="-135.26785714285714"/>
        </scene>
        <!--MoodGraphs-->
        <scene sceneID="vox-M3-f3l">
            <objects>
                <viewControllerPlaceholder storyboardName="MoodGraphs" id="WUz-gb-EjB" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="NkM-62-CQG" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="959" y="-360"/>
        </scene>
        <!--CogGameGraphs-->
        <scene sceneID="V1A-K0-C5E">
            <objects>
                <viewControllerPlaceholder storyboardName="CogGameGraphs" id="5Tg-Zv-11V" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="pJ9-BP-84W" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="978" y="-224"/>
        </scene>
        <!--MotorGameGraph-->
        <scene sceneID="kqm-Yt-Wgv">
            <objects>
                <viewControllerPlaceholder storyboardName="MotorGameGraph" id="85w-Ie-q5Z" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ySh-1u-LlT" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="959" y="-101"/>
        </scene>
    </scenes>
    <resources>
        <image name="Back Button" width="308" height="113"/>
        <image name="CogGame graph button" width="308" height="145"/>
        <image name="Mood Graph Button" width="308" height="145"/>
        <image name="Motorgame graph button" width="308" height="145"/>
    </resources>
</document>
