...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dont have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfE-f1-1jh">
                                <rect key="frame" x="107" y="737" width="200" height="24"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ib4-0s-coT" userLabel="Login Button">
                                <rect key="frame" x="64" y="634" width="286" height="73"/>
                                <state key="normal" image="Login Button"/>
                                <connections>
                                    <action selector="loginTapped:" destination="GTy-FM-gi5" eventType="touchUpInside" id="jmY-bN-GbI"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dOO-mx-ulJ">
                                <rect key="frame" x="64" y="474" width="286" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="286" id="p0T-cD-kAc"/>
                                    <constraint firstAttribute="height" constant="60" id="sy2-Vz-k2G"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eT9-dg-1jS">
                                <rect key="frame" x="64" y="554" width="286" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="HwU-wH-hyJ"/>
                                    <constraint firstAttribute="width" constant="286" id="kgz-mX-wpd"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
